# docs/swagger.json
@@ -791,22 +791,22 @@
             ],
             "properties": {
                 "account": {
-                    "$ref": "#/definitions/sql.NullString"
+                    "$ref": "#/definitions/null.String"
                 },
                 "id": {
                     "type": "integer"
                 },
                 "last_check": {
-                    "$ref": "#/definitions/sql.NullInt64"
+                    "$ref": "#/definitions/null.Int"
                 },
                 "master": {
-                    "$ref": "#/definitions/sql.NullString"
+                    "$ref": "#/definitions/null.String"
                 },
                 "name": {
-                    "$ref": "#/definitions/sql.NullString"
+                    "$ref": "#/definitions/null.String"
                 },
                 "notified_serial": {
-                    "$ref": "#/definitions/sql.NullInt32"
+                    "$ref": "#/definitions/null.Int"
                 },
                 "records": {
                     "type": "array",
@@ -815,7 +815,7 @@
                     }
                 },
                 "type": {
-                    "$ref": "#/definitions/sql.NullString"
+                    "$ref": "#/definitions/null.String"
                 }
             }
         },
@@ -854,25 +854,7 @@
                 }
             }
         },
-        "pdns_api.HTTPError": {
-            "type": "object",
-            "properties": {
-                "message": {}
-            }
-        },
-        "sql.NullInt32": {
-            "type": "object",
-            "properties": {
-                "int32": {
-                    "type": "integer"
-                },
-                "valid": {
-                    "description": "Valid is true if Int32 is not NULL",
-                    "type": "boolean"
-                }
-            }
-        },
-        "sql.NullInt64": {
+        "null.Int": {
             "type": "object",
             "properties": {
                 "int64": {
@@ -884,7 +866,7 @@
                 }
             }
         },
-        "sql.NullString": {
+        "null.String": {
             "type": "object",
             "properties": {
                 "string": {
@@ -894,6 +876,12 @@
                     "description": "Valid is true if String is not NULL",
                     "type": "boolean"
                 }
+            }
+        },
+        "pdns_api.HTTPError": {
+            "type": "object",
+            "properties": {
+                "message": {}
             }
         }
     },
